fixed footer image and spacing. Added CTA Band

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* Header */
 
 .logo {
     width: 99px;
@@ -53,7 +54,6 @@
     font-size: 20px;
     font-weight: bold;
     border: 1px #E2DDD7;
-    margin-right: 200px;
 }
 
 .custom-button:hover {
@@ -62,37 +62,50 @@
     box-shadow: 5px 10px 5px 2px rgba(0, 0, 0, .3) inset;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto;
-    grid-gap: 10px;
-  }
-  
-  .grid-container > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .single-cell {
-    grid-column: 1 / -1;
-    font-family: 'Josefin sans', sans-serif;
-    font-size: 24px;
-  }
-  
-  .three-cols {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    font-family: 'Josefin sans', sans-serif;
-    font-size: 32px;
-    font-weight: bold;
-    text-align: center;
-  }
+/* Footer */
+.custom-container {
+    background-color: #E2DDD7;
+}
 
-  .alt {
-    font-family: "Aboreto", cursive;
-    font-weight: normal;
-  }
-  
+.custom-container-row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 20px;
+}
+
+.custom-row {
+    margin-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;;
+}
+
+.footer-nav-link {
+    color: #080C59;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+h2 {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: #080C59;
+}
+
+/* CTA Band */
+
+.custom-cta {
+    background-color: #080C59;
+    color: #E2DDD7;
+}
+
+.band-header {
+    font-family: 'Aboreto', cursive;
+    font-size: 40px;
+    font-weight: bold;
+    color: #E2DDD7;
+}
